--- a/app/build.gradle
+++ b/app/build.gradle
@@ -5,7 +5,7 @@ android {
     buildToolsVersion '25.0.0'
 
     defaultConfig {
-        applicationId "com.lern.SchulPhysikApp"
+        applicationId "com.lern.schulphysikapp"
         minSdkVersion 15
         targetSdkVersion 21
         versionCode 3 // This number should increase every time the APK is created
