--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -1,6 +1,6 @@
 <?xml version="1.0" encoding="utf-8"?>
 <manifest xmlns:android="http://schemas.android.com/apk/res/android"
-    package="com.lern.mathe1app" >
+    package="com.lern.schulphysikapp" >
 
     <application
         android:allowBackup="true"
@@ -8,7 +8,7 @@
         android:label="@string/app_name"
         android:theme="@style/AppTheme" >
         <activity
-            android:name="com.lern.mathe1app.MainActivity"
+            android:name="com.lern.schulphysikapp.MainActivity"
             android:configChanges="keyboardHidden|orientation|screenSize"
             android:label="@string/app_name"
             android:screenOrientation="portrait" >
@@ -19,12 +19,12 @@
             </intent-filter>
         </activity>
         <activity
-            android:name="com.lern.mathe1app.TestAufgabe"
+            android:name="com.lern.schulphysikapp.TestAufgabe"
             android:label="@string/title_activity_test_aufgabe"
             android:screenOrientation="portrait" >
         </activity>
         <activity
-            android:name="com.lern.mathe1app.Statistic"
+            android:name="com.lern.schulphysikapp.Statistic"
             android:label="@string/title_activity_statistic"
             android:screenOrientation="portrait" >
         </activity>
